--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -1,24 +1,24 @@
 .navigation {
-	.navigation__list {
-	  display: flex;
-	  padding-left: 0;
-	  list-style: none;
-	}
+  .navigation__list {
+    display: flex;
+    list-style: none;
+    padding-left: 0;
 
-	.navigation__list-item {
-	  display: inline-block;
-	  padding: 0.2em 0.4em;
-	}
+    .list-item {
+      display: inline-block;
+      padding: 0.2em 0.4em;
+    }
+  }
 
- 	&.navigation--horizontal {
- 		.navigation__list {
- 			flex-direction: row;
- 		}
- 	}
+  &.navigation--horizontal {
+    .navigation__list {
+      flex-direction: row;
+    }
+  }
 
- 	&.navigation--vertical {
- 		.navigation__list {
- 			flex-direction: column;
- 		}
- 	}
+  &.navigation--vertical {
+    .navigation__list {
+      flex-direction: column;
+    }
+  }
 }
